Geometry nodes warning of missing attributes even when the geometry contains no data #85979

Closed
opened 2021-02-25 11:45:18 +01:00 by Dalai Felinto · 5 comments

Blender Version
Broken: 2.93 alpha (b5d39f9b46)
Worked: Never

Short description of error

The nodes warning is checking for attribute existence even when there is no geometry piped through it. If we are to throw an error let it be that there is no geometry there. But honestly I think we are better off with no errors in this case whatsoever. (users can still - in the future - inspect the sockets).

Exact steps for others to reproduce the error

empty-geometry-warning.blend

{F9838081, size=full}

**Blender Version** Broken: 2.93 alpha (b5d39f9b469e) Worked: Never **Short description of error** The nodes warning is checking for attribute existence even when there is no geometry piped through it. If we are to throw an error let it be that there is no geometry there. But honestly I think we are better off with no errors in this case whatsoever. (users can still - in the future - inspect the sockets). **Exact steps for others to reproduce the error** [empty-geometry-warning.blend](https://archive.blender.org/developer/F9838079/empty-geometry-warning.blend) {[F9838081](https://archive.blender.org/developer/F9838081/image.png), size=full}
Hans Goudey was assigned by Dalai Felinto 2021-02-25 11:45:18 +01:00
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Member

Yeah, good point. I'll check for an empty geometry component before adding the error

Yeah, good point. I'll check for an empty geometry component before adding the error

This issue was referenced by 626a8e0f10

This issue was referenced by 626a8e0f10ef90415c3811567b789168484c0b88
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85979
No description provided.